<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros2_control</name>
  <version>0.0.6</version>
  <description>gazebo_ros2_control</description>

  <maintainer email="alejandro@osrfoundation.org">Alejandro Hernandez</maintainer>

  <license>BSD</license>
  <license>Apache License 2.0</license>

  <url type="website">http://ros.org/wiki/gazebo_ros_control</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros2_control/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros2_control/</url>

  <author>Jonathan Bohren</author>
  <author>Dave Coleman</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros2_control plugin="${prefix}/gazebo_hardware_plugins.xml"/>
  </export>
</package>
