<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_ros2_control_tests</name>
  <version>0.0.2</version>
  <description>Gazebo ros2 control tests</description>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernández</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros2_control_demos</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_testing</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
