<?xml version="1.0"?>
<package format="3">
  <name>rrbot_description</name>
  <version>0.0.0</version>
  <description>Rrbot Resources used for MoveIt testing</description>

  <author email="alejandro@openrobotics.org">Alejandro</author>

  <maintainer email="alejandro@openrobotics.ee">Alejandro</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
